# shmem-opensnapi

./: LICENSE  README.md  autogen.sh  configure.ac
config/m4/: shmemio.m4
contrib/: .gitignore  Readme.md  env.sh  install-osss.sh
contrib/osss-testapp/: README.md  shmem_env.sh
contrib/osss-testapp/ISx-sort-gbuild/: Makefile  README.md  license.txt  run-gbuild.sh
contrib/osss-testapp/ISx-sort-gbuild/SHMEM/: Makefile  gbuild.c  gbuild.h  isx.c  isx.h  params.h  timer.c  timer.h
contrib/osss-testapp/shmemio_test/: Makefile  connect.c  fflush.c  fopen.c  run_test.sh  sharing.c  timer.c  timer.h
contrib/ucx-test/: Makefile  Readme-pmem.md  Readme.md  mapdev_ctl.sh  ucp_mapdev.c  ucx_env.sh
contrib/util/: install_xpmem.sh  xpmem_ctrl.sh
include/: Makefile.am
include/shmem/: api.h  api_shmemio.h  defs.h.in  defs_shmemio.h
src/: Makefile.am  init.c  io.c  putget.h
src/allocator/: dlmalloc.h
src/shmemc/: Makefile.am  osh_common.in  shmemc.h  state.c  thispe.h
src/shmemc/ucx/: comms.c  init.c
src/shmemio/: Makefile.am  client_connect.c  client_fspace.c  dlmalloc_includer.c  fspace_server.c  server_connect.c  server_fopen.c  server_init.c  server_pmem.c  shmemio.h  shmemio_client.h  shmemio_client_fpe.h  shmemio_client_region.h  shmemio_server.h  shmemio_stream_util.h  shmemio_test_util.h
